# python-packaging-rodeo

./: COPYING  README.md  machnix.nix  pyproject.toml  shell.nix
.github/workflows/: apt-get.yaml  conda.yaml  mach-nix.yaml  nix.yaml  pip  pip.yaml  poetry2nix.yaml
nix/nixpkgs/: shell.nix
nix/poetry2nix/: shell.nix
