[tool.poetry]
name = "python-packaging-rodeo"
version = "0.1.0"
description = ""
authors = ["Noah D. Brenowitz <nbren12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Cartopy = "^0.18.0"
tensorflow = "^2.4.1"
xgcm = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
